objects/ProjectPieces__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Place to store Project piece info and hard coded ids</description>
    <fields>
        <fullName>Milestones10__c</fullName>
        <label>Milestones10</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestones1__c</fullName>
        <label>Milestones1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestones2__c</fullName>
        <label>Milestones2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MilestonesElse__c</fullName>
        <label>MilestonesElse</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>ProjectPieces</label>
</CustomObject>